--- a/srcs/front/frontend/src/pages/Profile/Profile.module.css
+++ b/srcs/front/frontend/src/pages/Profile/Profile.module.css
@@ -19,7 +19,7 @@
 	padding: 8px;
 	margin-bottom: 20px;
 	font-size: 1.5em;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-family: monospace, Verdana, Geneva, Tahoma, sans-serif, sans-serif;
 	color: whitesmoke;
 	background-color: rgb(75, 0, 130);
 	box-shadow: 0 0 10px rgba(75, 0, 130, 1);
@@ -34,10 +34,9 @@
 
 .userinfo_container {
 	margin-bottom: 2%;
-	border: 10px solid white;
-	border-radius: 30px;
+	border: 5px solid white;
 	width: 70%; /* Use width instead of min/max */
-	background-color: rgb(75, 0, 130, 0.4);
+	background-color: black;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -48,7 +47,7 @@
 	margin: 2%;
 	color: whitesmoke;
 	font-size: 1.5em;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-family: monospace, Verdana, Geneva, Tahoma, sans-serif, sans-serif;
 	text-align: center;
 	width: 100%;
 	overflow-wrap: break-word;
@@ -99,7 +98,7 @@
 	display: block;
 	margin-bottom: 5px;
 	color: whitesmoke;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-family: monospace, Verdana, Geneva, Tahoma, sans-serif, sans-serif;
 }
 
 .form_group input {
@@ -108,7 +107,7 @@
 	border-radius: 10px;
 	border: none;
 	background-color: whitesmoke;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-family: monospace, Verdana, Geneva, Tahoma, sans-serif, sans-serif;
 	box-sizing: border-box; /* Include padding in width */
 }
 
@@ -119,7 +118,7 @@
 	padding: 8px;
 	margin-top: 20px;
 	font-size: 1.5em;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-family: monospace, Verdana, Geneva, Tahoma, sans-serif, sans-serif;
 	color: whitesmoke;
 	background-color: rgb(75, 0, 130);
 	box-shadow: 0 0 10px rgba(75, 0, 130, 1);
